--- a/package.json
+++ b/package.json
@@ -1,14 +1,48 @@
 {
-  "name": "rando",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "tryGithubActions",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
+    "start": "serve dist -l $PORT",
+    "prestart": "npm run build",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "lint-input": "node src/test/linter.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "password-generator": "^2.2.0"
-  }
+    "serve": "^10.1.2",
+    "vue": "^2.5.22",
+    "@vue/cli-service": "^3.4.0",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.5.21"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
