--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "lint-input": "node src/test/linter.js"
   },
   "dependencies": {
-    "serve": "^10.1.2",
-    "vue": "^2.5.22",
-    "@vue/cli-service": "^3.4.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "serve": "^10.1.2",
+    "stylelint": "^11.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "vue": "^2.5.22",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
