--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stylelint": "stylelint '**/*.css' --fix & stylelint '**/*.scss' --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
